portfolio_index_styles.css
/********************

Author: Daniel Repko

*********************

Table of Contents

...... Body 
...... Main Columns
...... QuickFind
...... Header
...... About Me
...... Previous Work
...... Tools and Skills
...... Work Experience
...... Resume
...... Section Titles
...... Footer
...... Media Query
_____________________

********************/


/**************************************** Body */
body {
	font-family: Trebuchet MS;
	background: #263541;
	color: #82BD16;
}

/**************************************** Main Columns */

#quickfind_column {
	width: 30%;
	float: left;
	background: #1e1e1e;
}

#main_column {
	width: 70%;
	float: right;
}

/**************************************** QuickFind */
#quickfind_box{	
	text-align: center;
	position: fixed;
	left: 1%;
	right: 71%;
	top: 16em;
}

#quickfind_box h1{
	font-size: 2.3em;
	margin-bottom: 1em;
	text-decoration: underline;
	text-decoration-color: #0EC4C4;
	color: #82BD16;
}

#quickfind_box h1::after {
	content: "\00a0\00a0";
}

#quickfind_box h1::before {
	content: "\00a0\00a0";
}

#quickfind_list{
	padding-left: 0;
}

#quickfind_list li{
	list-style-type: none;
	font-size: 1.7em;
	margin-bottom: 1em;
}

#quickfind_list a {
	text-decoration: none;
	color: #4b6c0f;
}

#quickfind_list a:hover{
	text-decoration: underline;
	color: #068989;
}


/**************************************** Header */
header{
	padding-bottom: 0 !important;
}

header h4{
	display: inline-block;
	margin-top: 1em;
	margin-bottom: 1em;
}

#linkedin{
	margin-left: 4%;
}

#twitter{
	margin-left: 2%;
}

#header_title_area{
	background: #74AD1D;
	margin-top: -1rem;
}

#header_title{
	color: #345000;
	font-size: 3em;
}

#header_contact_area{
	background: #6E932B;
	color: #345000;
}

#header_contact_area a {
	color: #2b4201;
}

#header_is_compressed {
	width: 30% !important;
	position: fixed;
	top: 0;
	left: 0;
}

#header_is_compressed #header_title{
	text-align: center;
}

#header_is_compressed #linkedin{
	margin-left: 0;
}

#header_is_compressed #twitter{
	margin-left: 0;
}

#header_is_compressed h4{
	font-size: .9em;
	text-align: center;
}

/**************************************** About Me */
#about_me_body{
	font-size: 1.5em;
}




/**************************************** Previous Work */
.work_figure{
	background: #262626;
    text-align: center;
}


.work_year {
	font-size: 1.5vw;
	color: #0EC4C4;
}

.work_pic.fullscreen_pic {
	width: 90%;
}

.work_pic.connect_four{
	width: 69.2%;
}

.work_pic.mobile{
	width: 40%;
}

.work_link{
	width: 100%;
	color: white;
	
}

.work_blurb {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	right: 0;
	background-color: #1a57ba;
	opacity: 0;
}

.work_blurb:hover {
	opacity: 0.93;
}

.work_blurb h1{
	font-size: 2vw;
}

.work_desc.lightsabers {
	font-size: 1vw;
}

.work_desc.connect_four{
	margin-top: 8%;
	font-size: 1.3vw;
}

.work_desc.mobile {
	margin-top: 15%;
	font-size: 1.3vw;
}

.work_desc.monster_island {
	margin-top: 10%;
	font-size: 1.3vw;
}

.work_desc.pood_pood{
	margin-top: 6%;
	font-size: 1.3vw;
}

br{
    display: none;
}

/**************************************** Tools and Skills */
#tools_skills li{
	font-size: 1.2em;
	list-style: none;
	margin-bottom: 0.3em;
}

#tools_skills li::before{
	content: "\2022";
	color: #0EC4C4;
	display: inline-block;
	width: 1em;
	margin-left: -1em;
}

#tools_skills h2{
	margin-bottom: 0.5em;
}

/**************************************** Work Experience */
#work_experience h4{
	color: #6E932B;
}

#work_experience h3{
	color: #74AD1D;
}

#work_experience li{
	list-style: none;
}

#work_experience li::before{
	content: "\2022";
	color: #0EC4C4;
	display: inline-block;
	width: 1em;
	margin-left: -1em;
}


/**************************************** Resume */
#resume_iframe{
	width: 50em;
	height: 60em;
	border: none;
}

#resume_section h3{
	margin-top: 1em;
	margin-bottom: .5em;
}

#resume_section a {
	color: #4e7507;
}

#resume_download_DOCX{
	margin-left: 2em;
}

#resume_download_PDF {
	margin-left: 1em;
}



/**************************************** Section Titles */
.section_title {
	text-decoration: underline;
	text-decoration-color: #0EC4C4;
	color: #82BD16;
}
.section_title::after{
	content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
}

/**************************************** Footer */
footer{
	background: #0EC4C4;
	height: 3em;
}

/**************************************** Media Query */
@media only screen and (max-width: 600px){     
    #header_contact_area{
        font-size: 3vw;
    }
    
    #contact_phone{
	   margin-left: 1%;
    }
    
    .section_title{
        text-align: center;
    }
    
    .section_title::after{
	   content: "\00a0\00a0";   
    }

	.section_title::before{
	   content: "\00a0\00a0";   
    }
    
    #tools_skills ul{
       margin-right: 0;
    }
    
    #work_experience h3,h4{
        text-align: center;
    }
    
    #work-experience ul{
        text-align: left;
    }
    
    
}

@media only screen and (max-width: 650px){  
    br{
        display: block;
    }

	.work_blurb h1 {
		font-size: 4vw;
	}

	.work_blurb.mobile h1 {
		margin-top: 30%;
	}
    
    .work_year {
	   font-size: 3.5vw;
    }
}

@media only screen and (max-width: 900px) 
{
	.work_blurb h1{
		margin-top: 20%;
	}

	.work_blurb.mobile h1 {
		margin-top: 30%;
	}

	.work_desc{
		display: none;
	}
}

@media only screen and (max-width: 1310px){
	#header_is_compressed h4 {
		font-size: 1vw;
		text-align: center;
	}
}

@media only screen and (max-width: 1080px) {
	header h4 {
		font-size: 1.4vw;
	}
}

